/*
 * $Id: ChangeLog,v 1.3631 2004/11/26 12:08:28 mauriliolongo Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-11-26 17:31 UTC+0300 Phil Krylov <phil a t newstar.rinet.ru>
  * make_tgz.sh
  * bin/hb-func.sh
    * Respect HB_WITHOUT_GTSLN environment variable.
  * make_drw.sh
    * Use gtcrs instead of gtsln by default.
  * bin/hb-mkslib.sh
    ! Don't use -bind_at_load in Darwin - it does nothing sensible and
      is unsupported by some libtool versions.

2004-11-26 13:05 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
   * source/rtl/teditor.prg
   * source/rtl/memoedit.prg
     ! Fixed compatibility with clipper when edit buffer cannot be
       edited and cursor keys are pressed (that is, make text scroll
       instead of cursor)

2004-11-25 23:58 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
  * tests/readhrb.prg
    ! fixed to be able to read current .hrb files.

2004-11-25 16:36 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/gtwin/gtwin.c
    * OSVERSIONINFO structure moved to a static variable.
    + Added altgr_key item into tag_ClipKeyCode, for avoid conflicts
      with characters typed with AltGr in foregin keyboards.
    * "Upper row keys" hack under Win98 is only performed on Win9x
      environment.

2004-11-25 14:00 UTC-0300 Mauricio Abre <maurifull@datafull.com>
  * include/gfx.ch
    + GFX_SETCLIP constant for setting clip region
    + gfxSetClip() translate
  * source/rtl/gtalleg/gtalleg.c
    + GFX_SETCLIP implementation
    + gfx API ability to get buffered under dispBegin()/dispEnd()

2004-11-25 16:15 UTC+0100 Maurilio Longo <maurilio.longo@libero.it>
  * source/rtl/tbrowse.prg
    ! Fixed ::PosCursor() to keep track of centered/right-justified
      columns. Fixed ::Dehilite(), had the same error of ::Hilite()
      previously fixed.